--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
     </button>
     <div class="container">
         <div class="header">
-            <img src="/pic.jpg">
+            <img src="pic.jpg">
             <h1>Mary Ann Lacerna</h1>
             <p>Web Developer & Programmer</p>
         </div>
